assets/css/style.css
/* ... */
/* Modal close button */
.close {
    color: #eb6123 !important;
    cursor: pointer;
}

/* Game rules header */
.game-rules {
    text-align: center;
    font-size: 2.2rem;
    background-color: #eb6123;
    color: black;
    border-radius: 10px;
    width: 55%;
    margin: 5px auto;
    padding: 5px;
    font-family: Metal Mania;
    letter-spacing: 6px;
}

/* Modal list items */
.modal-content li {
    margin-bottom: 20px;
    font-size: 1.5rem;
    color: white;
    border-radius: 10px;
    text-align: center;
    width: 90%;
    margin: 5px auto;
    max-height: 80%;
    font-family: playpen;
    letter-spacing: 1px;
}


/* Modal Open button */
#openModalBtn {
    color: #eb6123;
    text-align: center;
    font-size: 2rem;
    position: absolute;
    height: 75px;
    width: 100%;
    background-color: black;
    font-family: Metal Mania;
    letter-spacing: 6px;
}

/* Start Quiz Button */
#startQuizBtn {
    color: black;
    text-align: center;
    font-size: 2rem;
    border-radius: 10px;
    background-color: #eb6123;
    width: 55%;
    margin: 5px auto;
    font-family: Metal Mania;
    letter-spacing: 6px;
}

/* Game */

#game-outer {
    height: 100vh;
    background-color: black;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#game-grid {
    display: grid;
    position: relative;
}

/* Floors */

.floor {
    width: 100%;
    background-image: url('../images/game/floor.png');
    background-repeat: repeat-x;
}

#floor-1, #floor-2 {
    display: none;
    position: absolute;
}

/* Doors */

.door {
    display: inline-block;
    background-size: cover;
    grid-row-start: 6;
    grid-row-end: 8;
    z-index: 1;
}

#door-1 {
    grid-column-start: 4;
    grid-column-end: 6;
}

#door-2 {
    grid-column-start: 8;
    grid-column-end: 10;
}

#door-3 {
    grid-column-start: 12;
    grid-column-end: 14;
}

.door-easy {
    background-image: url('../images/game/doors/door-easy.png');
}

.door-medium {
    background-image: url('../images/game/doors/door-medium.png');
}

.door-hard {
    background-image: url('../images/game/doors/door-hard.png');
}

.door-puzzle {
    background-image: url('../images/game/doors/door-puzzle.png');
}

.barricade {
    width: 100%;
    height: 100%;
    background-image: url('../images/game/doors/door-boards.png');
    background-size: cover;
}

.prop {
    background-size: cover;
    z-index: 1;
}

/* Individual prop positions. Works off a 16x7 grid */

/* Wall and floor props will have different y coordinates */
.prop-wall {
    grid-row-start: 4;
    grid-row-end: 6;
}

.prop-floor {
    grid-row-start: 6;
    grid-row-end: 8;
}

/* The horizontal position of the prop */
.prop-left {
    grid-column-start: 2;
    grid-column-end: 4;
}

.prop-mid-left {
    grid-column-start: 6;
    grid-column-end: 8;
}

.prop-mid {
    grid-column-start: 8;
    grid-column-end: 10;
}

.prop-mid-right {
    grid-column-start: 10;
    grid-column-end: 12;
}

.prop-right {
    grid-column-start: 14;
    grid-column-end: 16;
}

/* Quizes/Puzzles */

/* Overlay that covers the entire screen */
#room-overlay {
    position: absolute;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 2;
}

.puzzle {
    display: none;
}

#puzzle-panels {
    width: 80%;
    display: none;
    flex-direction: row;
    justify-content: space-between;
}

.panel-board {
    width: 45%;
    aspect-ratio: 1/1;
    display: grid;
}

.panel {
    margin: 3%;
    background-size: cover;
}

.panel-light {
    background-image: url('../images/game/panels/panel-light.png');
}

.panel-dark {
    background-image: url('../images/game/panels/panel-dark.png');
}


/* Media Queries */

/* Media query for large screen widths */
@media screen and (max-width: 1200px) {

    /* Doors */

    #door-1 {
        grid-column-start: 3;
        grid-column-end: 5;
    }

    #door-2 {
        grid-column-start: 7;
        grid-column-end: 9;
    }

    #door-3 {
        grid-column-start: 11;
        grid-column-end: 13;
    }

    /* Props */
    .prop-left {
        grid-column-start: 1;
        grid-column-end: 3;
    }

    .prop-mid-left {
        grid-column-start: 5;
        grid-column-end: 7;
    }

    .prop-mid {
        grid-column-start: 7;
        grid-column-end: 9;
    }

    .prop-mid-right {
        grid-column-start: 9;
        grid-column-end: 11;
    }

    .prop-right {
        grid-column-start: 13;
        grid-column-end: 15;
    }
}
/* ... */

